add : notification bell when an update is needed

--- a/CODEX/CODEX.csproj
+++ b/CODEX/CODEX.csproj
@@ -206,6 +206,7 @@
   <ItemGroup>
     <Content Include="CODEXIcon.ico" />
     <Content Include="CODEXLogo_1.ico" />
+    <None Include="Resources\notification.png" />
     <None Include="Resources\CODEXLogo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
